am adding the reset button to make if the game wants to start again

--- a/blackjackGame/index.html
+++ b/blackjackGame/index.html
@@ -10,8 +10,11 @@
       <h1>Welcome to blackjack game</h1>
       <p id="cards">Cards:</p>
       <p id="sum">Sum:</p>
-
-      <button id="start-game" onclick="startGame()">Start Game</button>
+<div class="start-reset-btn">
+<button id="start-game" onclick="startGame()">Start Game</button>
+      <button id="reset-game" onclick="resetGame()">Reset Game</button>
+</div>
+      
       <p id="message">mess</p>
       <button id="new-card" onclick="newCard()">New Card</button>
     </div>
